Push to GitHub. Not PWA yet? Issue with bubble flicker as word is being build. No styling to load at the moment.

--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,8 @@ html {
   73.27% {font-size:120%; transform: scale(1.18); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.5), 0px 4px 10px 0px rgba(0,0,0,0.16), 0px 1px 15px 0px rgba(0,0,0,0.16);}
   79.93% {font-size:120%; transform: scale(1.18); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.5), 0px 4px 10px 0px rgba(0,0,0,0.14), 0px 1px 15px 0px rgba(0,0,0,0.16);}
   86.59% {font-size:120%; transform: scale(1.19); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.5), 0px 4px 10px 0px rgba(0,0,0,0.16), 0px 1px 15px 0px rgba(0,0,0,0.16);}
-  93.25% {font-size:120%; transform: scale(1.2); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.5), 0px 4px 10px 0px rgba(0,0,0,0.16), 0px 1px 15px 0px rgba(0,0,0,0.16);}
-  100%   {font-size:120%; transform: scale(1.25); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.6), 0px 4px 10px 0px rgba(0,0,0,0.16), 0px 1px 15px 0px rgba(0,0,0,0.17);}
+  /* 93.25% {font-size:120%; transform: scale(1.2); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.5), 0px 4px 10px 0px rgba(0,0,0,0.16), 0px 1px 15px 0px rgba(0,0,0,0.16);} */
+  100%   {font-size:120%; transform: scale(1.20); box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.6), 0px 4px 10px 0px rgba(0,0,0,0.16), 0px 1px 15px 0px rgba(0,0,0,0.17);}
 }
 
 @keyframes emphasize {
